--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/hamzboy99/LingoWords</url>
+			<url>https://maven.pkg.github.com/hamzboy99/Lingogame</url>
 		</repository>
 	</distributionManagement>
 
